--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-/* App.css */
 
 body, html {
   margin: 0;
@@ -6,15 +5,27 @@ body, html {
   font-family: 'Georgia', serif;
 }
 
+#bg-video {
+  position: fixed;
+  top: 0;
+  left: 0;
+  min-width: 100%;
+  min-height: 100%;
+  object-fit: contain;
+  z-index: -1;
+}
+
 .invite-background {
-  background-image: url('/public/your-photo.jpg');
+  background-image: url('./assets/backgroundPhoto.jpg');   /* only procs if necessary. */
   background-size: contain;
   background-position: center;
+  transition: background-image 0.5s ease-in-out;
   min-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
   position: relative;
+  z-index: 1;
 }
 
 .overlay {
@@ -25,6 +36,7 @@ body, html {
   left: 0;
   right: 0;
   bottom: 0;
+  z-index: 0;
 }
 
 .invite-card {
@@ -138,8 +150,9 @@ button.next { right: 0; }
 ////////////////ThankYou Compoment////////
 
 .thank-you-background {
-  background-image: url('/public/your-photo.jpg'); /* Optional: can use a background */
+  background-image: url('./assets/backgroundPhoto.jpg'); /* Optional: can use a background */
   background-size: cover;
+  background-repeat: no-repeat;
   background-position: center;
   min-height: 100vh;
   display: flex;
